# caatingarobotics

./: .gitignore  README.md
.github/workflows/: ci-ros2.yml
datasets/agro_v1/: data.yaml
src/agro_robot_sim/: CMakeLists.txt  ament_flake8.ini  package.xml  readme.md
src/agro_robot_sim/launch/: fazenda_completa.launch.py  gravador_rotas.py  missao_fazenda.py  nav.launch.py  navigation.launch.py  online_async_launch.py  sim.launch.py  start_mapping.launch.py
src/agro_robot_sim/sistema_rotas_de_trabalho/: gravador_rotas.py  ir_garagem.py  leitor_rotas.py  painel_controle.py  rastreabilidade_ue.py  salvar_garagem.py
src/agro_robot_sim/worlds/: 1minha_fazenda.world  minha_fazenda.world
src/caatinga_vision/: package.xml  readme.md  setup.cfg  setup.py
src/caatinga_vision/caatinga_vision/: camera_source_node.py  infestation_analytics_node.py  photo_capture_node.py  yolo_inference_node.py
src/caatinga_vision/config/: ia_params.yaml  photo_capture_params.yaml
src/caatinga_vision/launch/: ia_pipeline.launch.py  photo_capture.launch.py
src/caatinga_vision/models/: README.md
src/caatinga_vision/resource/: caatinga_vision
